# OGLAB

./: .gitattributes  .gitignore  CLC.sln  CMakeLists.txt  README.md  todo.txt  vcpkg.json
CLC/: CLC.vcxproj  CLC.vcxproj.filters  imgui.ini  readme.txt  shaders.json
CLC/CORE/: Camera.hpp  CubeMap.cpp  CubeMap.hpp  CubeRenderer.cpp  CubeRenderer.hpp  Engine.cpp  Engine.hpp  GameObject.cpp  GameObject.hpp  HeightMap.cpp  HeightMap.hpp  Input.cpp  Input.hpp  Light.cpp  Light.hpp  LightComponent.hpp  LightManager.cpp  LightManager.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PhysicsScene.hpp  Prefab.hpp  RayCastComponent.cpp  RayCastComponent.h  RenderComponent.hpp  Scene.cpp  Scene.hpp  Shader.cpp  ShaderProgram.cpp  ShaderProgram.hpp  SpherePhysics.cpp  SpherePhysics.hpp  SphereRenderer.cpp  SphereRenderer.hpp  TextureManager.cpp  TextureManager.hpp  Transform.hpp  Window.cpp  Window.hpp
CLC/CORE - Copie/: Component.hpp  Engine.cpp  Engine.hpp  GameObject.hpp  HeightMap.cpp  HeightMap.hpp  Input.cpp  Input.hpp  InterfaceRenderer.hpp  RenderComponent.hpp  Scene.hpp  Shader.cpp  ShaderProgram.cpp  ShaderProgram.hpp  Shaders.conf  Transform.hpp  Window.cpp  Window.hpp
CLC/CORE - Copie/Prefab/: Cube.hpp
CLC/CORE/Cameras/: CameraMC.cpp
CLC/CORE/Lights/: Light.cpp  LightManager.cpp  LightManager.hpp
CLC/CORE/ModelLoader/: Mesh.cpp  Mesh.hpp
CLC/CORE/PhysicsComponents/: CubePhysics.cpp  PhysicsComponent.cpp  PhysicsComponent.hpp
CLC/CORE/Prefabs/: Prefab.hpp  SomePrefabs.hpp
CLC/CORE/RenderComponents/: CubeMap.cpp  CubeRenderer.cpp  Cursor.hpp  ModelRenderer.cpp  ModelRenderer.hpp  RenderComponent.cpp  RenderComponent.hpp
CLC/CORE/UI/: CameraController.hpp  SceneObjectEditor.cpp  SceneObjectEditor.hpp
CLC/CORE/Window/: Window.cpp  Window.hpp
CLC/res/shaders/: assimpmodel.fs  assimpmodel.vs  cursor.vert  sphere.frag  sphere.vert  (+2 more)
CLC/src/: main.cpp
CORE/: Debug.hpp  Engine.cpp  GameObject.cpp  GameObject.hpp  Physics.cpp  Physics.hpp  PhysicsScene.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  TextureManager.hpp
CORE/Cameras/: Camera.cpp  Camera.hpp  CameraMC.hpp
CORE/Lights/: Light.hpp  LightManager.cpp  LightManager.hpp
CORE/Mesh/: CubeMap.hpp  CubeMesh.hpp
CORE/PhysicsComponents/: CubePhysics.hpp  SpherePhysics.cpp  SpherePhysics.hpp
CORE/Prefabs/: PrefabDefinition.hpp  PrefabManager.cpp  PrefabManager.hpp  SomePrefabs.hpp
CORE/RenderComponents/: CubeMap.hpp  CubeRenderer.hpp  ModelRenderer.cpp  ModelRenderer.hpp  SphereRenderer.cpp  SphereRenderer.hpp
CORE/UI/: CameraController.hpp  SceneObjectEditor.hpp
CORE/Window/: Input.cpp  Input.hpp  Window.cpp
CORE/shaders/: equirectangular_to_cubemap.fs  equirectangular_to_cubemap.vs  sphere.vert  standard.vert
Config/: imgui.ini
enc_temp_folder/3e37e0b5086e0ada16f4f3c35decd/: Input.cpp
res/shaders/: assimpmodel.fs  assimpmodel.vs  cubemap.frag  cubemap.vert  debug_quad.fs  simpleDepthShader.vert  sphere.frag  standard.frag
src/: devScene.cpp  devScene.hpp  main.cpp
